--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,14 +1,6 @@
 {
-  "extends": [
-    "stylelint-config-standard-scss",
-    "stylelint-prettier/recommended",
-    "stylelint-config-rational-order"
-  ],
-  "plugins": [
-    "stylelint-prettier",
-    "stylelint-order",
-    "stylelint-config-rational-order/plugin"
-  ],
+  "extends": ["stylelint-config-standard-scss", "stylelint-prettier/recommended"],
+  "plugins": ["stylelint-prettier"],
   "rules": {
     "selector-class-pattern": null,
     "max-nesting-depth": 10
