--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint:css": "npx stylelint \"**/*.{css,scss}\"",
     "lint:css:fix": "npx stylelint \"**/*.{css,scss}\" --fix",
     "prettier:fix": "prettier --write \"**/*.{ts,tsx,js,jsx,css,scss,json}\"",
-    "test": "jest"
+    "test": "jest",
+    "test:e2e": "wdio run ./wdio.conf.ts"
   },
   "repository": {
     "type": "git",
@@ -44,10 +45,15 @@
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "@types/react-router-dom": "^5.3.3",
+    "@types/webdriverio": "^5.0.0",
     "@types/webpack": "^5.28.3",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "@wdio/cli": "^8.20.2",
+    "@wdio/local-runner": "^8.20.0",
+    "@wdio/mocha-framework": "^8.20.0",
+    "@wdio/spec-reporter": "^8.20.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.50.0",
     "eslint-config-airbnb": "^19.0.4",
