--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "lint:css:fix": "npx stylelint \"**/*.{css,scss}\" --fix",
     "prettier:fix": "prettier --write \"**/*.{ts,tsx,js,jsx,css,scss,json}\"",
     "test": "jest",
-    "test:e2e": "wdio run ./wdio.conf.ts"
+    "test:e2e": "wdio run ./wdio.conf.ts",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "loki": "loki test"
   },
   "repository": {
     "type": "git",
@@ -36,7 +39,17 @@
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@storybook/addon-essentials": "^7.5.1",
+    "@storybook/addon-interactions": "^7.5.1",
+    "@storybook/addon-links": "^7.5.1",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.5.1",
+    "@storybook/react": "^7.5.1",
+    "@storybook/react-webpack5": "^7.5.1",
+    "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
@@ -65,14 +78,17 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "loki": "^0.32.0",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^3.0.3",
     "react-refresh": "^0.14.0",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
+    "storybook": "^7.5.1",
     "style-loader": "^3.3.3",
     "stylelint": "^15.10.3",
     "stylelint-config-standard-scss": "^11.0.0",
@@ -84,5 +100,16 @@
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.app",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      }
+    }
   }
 }
